Refactor tests for CertificateServiceImpl integration
Replaced mocked dependencies with real method calls to enable integration testing for certificate generation. Enhanced test cases to verify file creation and handle various input scenarios, ensuring comprehensive functionality coverage. Added setup with temporary directory for isolated file operations.